--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-typescript": "^6.1.0",
+    "@types/cheerio": "^0.22.22",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "cheerio": "^1.0.0-rc.3",
     "eslint": "^7.12.1",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
