build: fix tsconfig to exclude tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "tests"
+  ]
 }
