--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rollup-plugin-dts": "^1.4.13",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.4.3",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.5"
   },
   "husky": {
